--- a/views/login.html
+++ b/views/login.html
@@ -1,13 +1,9 @@
 <header>
 <h1>Welcome to UR Dashboard</h1>
 </header>
-<div id="first-time-content" ng-if="!isStudent">
-    <h2>Are you a student at the University of Rochester?</h2>
-    <button class="button-success pure-button" ng-click="proceedToLogin()">Yes!</button>
-    <button class="button-secondary pure-button" ng-click="uninstall()">Nope.</button>
-</div>
 
-<div id="loginForm" ng-if="isStudent">
+
+<div id="loginForm">
     <ng-form class="pure-form">
         <fieldset class="pure-group">
             <input type="text" class="pure-input-2-3" placeholder="NetID" required>
@@ -15,8 +11,9 @@
 
         </fieldset>
         <label for="terms" class="pure-checkbox">
-            <input id="terms" type="checkbox" ng-model="rememberMe" ng-change="updateRememberMe()"> Remember Me
+            <input id="terms" type="checkbox" ng-model="rememberMe" ng-change="updateRememberMe()"> Automatically Login
         </label>
+       
 
 
 
