not sure what I did here

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -56,11 +56,15 @@ h2 {
     text-align: center;
 }
 
-#loginForm {
+#login-form {
     font-family: 'RobotoThin';
     margin-left: 25%;
 }
 
+#login-loader {
+  width: 35px;
+  margin: 0 auto;
+}
 /* pure buttons */
 .button-success,
 .button-error,
