--- a/app/css/style.css
+++ b/app/css/style.css
@@ -38,14 +38,17 @@ header {
     }
 }
 
-/*
+
 @media all and (min-width:600px){
-    body{
-       background: url('chrome-extension://__MSG_@@extension_id__/images/rochester.jpg');
-        background-position-x: -256px;
+    html { 
+      background: url('chrome-extension://__MSG_@@extension_id__/images/rochester.jpg') no-repeat center center fixed; 
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
     }
 }
-*/
+
 
 h2 {
     font-family: 'RobotoThinItalic';
