--- a/app/css/style.css
+++ b/app/css/style.css
@@ -33,8 +33,11 @@ header {
 }
 
 @media all and (max-width:599px){
-    body {
-        background:#fff;
+    html {
+      background:#ffffff;
+    }
+    .windows8 .wBall .wInnerBall{
+      background: #000000;
     }
 }
 
@@ -44,6 +47,9 @@ header {
       background: url('chrome-extension://__MSG_@@extension_id__/images/rochester.jpg') no-repeat center center fixed; 
       -webkit-background-size: cover;
       background-size: cover;
+    }
+    .windows8 .wBall .wInnerBall{
+      background: #ffffff;
     }
 }
 
