--- a/app/views/login.html
+++ b/app/views/login.html
@@ -21,4 +21,4 @@
     </div>
 </div>
 
- <div loader id="login-loader" class="animated" loader-color="#000000" ng-show="loginStatus.attemptingLogin"></div>
+ <div loader id="login-loader" class="animated" ng-show="loginStatus.attemptingLogin"></div>
