--- a/app/views/wallet.html
+++ b/app/views/wallet.html
@@ -3,11 +3,11 @@
 
         <div class="pure-u-1-2 funds">
            
-            <a>{{funds.declining}} </a>
+            <a class="symbol">Đ</a><a>{{funds.declining}} </a>
         </div>
         <div class="pure-u-1-2 funds">
 
-            <a>{{funds.uros}}</a>
+             <a class="symbol">Ƒ</a><a>{{funds.uros}}</a>
         </div>
 
     </div>
